<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.iweizi.stepchanger.HelpActivity">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardCornerRadius="4dp"
        style="@style/help_card_view">
        <LinearLayout
            style="@style/help_card_linearlayout">
            <TextView
                style="@style/help_card_title"
                android:text="@string/qq_change_fail"/>
            <TextView
                style="@style/help_card_guide"
                android:text="@string/qq_change_guide"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardCornerRadius="4dp"
        style="@style/help_card_view">
        <LinearLayout
            style="@style/help_card_linearlayout">
            <TextView
                style="@style/help_card_title"
                android:text="@string/alipay_change_fail"/>
            <TextView
                style="@style/help_card_guide"
                android:text="@string/alipay_change_guide"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardCornerRadius="4dp"
        style="@style/help_card_view">
        <LinearLayout
            style="@style/help_card_linearlayout">
            <TextView
                style="@style/help_card_title"
                android:text="@string/note"/>
            <TextView
                style="@style/help_card_guide"
                android:text="@string/all_guide"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/help_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/back"/>

</LinearLayout>
