<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              tools:context="me.iweizi.stepchanger.wechat.WechatFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/wechat_icon_round"
            android:contentDescription="@string/wechat"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_today_step"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="24dp">

            <ImageButton
                android:id="@+id/wechat_sub_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/decrease"
                android:src="@drawable/ic_action_sub"/>

            <EditText
                android:id="@+id/wechat_current_today_step_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/current_today_step"
                android:inputType="number"
                android:textAlignment="center"/>

            <ImageButton
                android:id="@+id/wechat_add_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/increase"
                android:src="@drawable/ic_action_add"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/wechat_load_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/wechat_details_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/wechat_store_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store"
                tools:ignore="ButtonStyle"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>